# rocket-assets-fairing

./: Cargo.toml  README.md  Rocket.toml
src/: lib.rs
