[package]
name = "rocket-assets-fairing"
version = "0.1.0"
edition = "2018"
license = "MIT"
authors = [ "Gabriel Fontes <eu@misterio.me>" ]
description = "A rocket fairing for easily serving static with cache policy from a configurable directory"
readme = "README.md"
repository = "https://github.com/misterio77/rocket-assets-fairing"
categories = [ "development-tools", "web-programming" ]
keywords = [ "rocket", "assets", "fairing" ]

[dependencies]
rocket = "0.5.0-rc.1"
normpath = "0.3"
